Create activity for user and deliverer

--- a/android/Nile/app/src/main/res/layout/content_main.xml
+++ b/android/Nile/app/src/main/res/layout/content_main.xml
@@ -12,8 +12,22 @@
     tools:context="com.nile.nile.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="User"
+        android:id="@+id/buttonUser"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="setUserView" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Deliverer"
+        android:id="@+id/buttonDeliverer"
+        android:layout_below="@+id/buttonUser"
+        android:layout_alignStart="@+id/buttonUser"
+        android:onClick="setDelivererView" />
+
 </RelativeLayout>
