--- a/android/Nile/app/src/main/res/layout/activity_deliverer_register.xml
+++ b/android/Nile/app/src/main/res/layout/activity_deliverer_register.xml
@@ -13,23 +13,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:hint="FirstName"
+        android:hint="Name"
         android:ems="10"
-        android:id="@+id/editText"
-        android:layout_alignParentTop="true"
+        android:id="@+id/etNameDeliverer"
+        android:layout_above="@+id/btnSubmitDeliverer"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="79dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="LastName"
-        android:ems="10"
-        android:id="@+id/editText2"
-        android:layout_below="@+id/editText"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp" />
+        android:layout_marginBottom="30dp" />
 
     <Button
         android:layout_width="wrap_content"
