--- a/android/Nile/app/src/main/res/layout/content_main.xml
+++ b/android/Nile/app/src/main/res/layout/content_main.xml
@@ -30,4 +30,14 @@
         android:layout_alignStart="@+id/buttonUser"
         android:onClick="setDelivererView" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="START DELIVER"
+        android:id="@+id/button"
+        android:layout_marginTop="183dp"
+        android:layout_below="@+id/buttonDeliverer"
+        android:layout_centerHorizontal="true"
+        android:onClick="startDeliver"/>
+
 </RelativeLayout>
