--- a/android/Nile/app/src/main/res/layout/activity_deliverer.xml
+++ b/android/Nile/app/src/main/res/layout/activity_deliverer.xml
@@ -4,6 +4,20 @@ android:id="@+id/LinearLayout1"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical"
-tools:context="com.nile.nile.DelivererActivity">
+tools:context="com.nile.nile.DelivererActivity"
+    android:weightSum="1">
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="193dp"
+        android:id="@+id/addressList"
+        android:layout_weight="2.19" />
+
+    <fragment
+        class="com.here.android.mpa.mapping.MapFragment"
+        android:id="@+id/mapDeliver"
+        android:layout_width="fill_parent"
+        android:layout_height="302dp"/>
+
 
 </LinearLayout>
