--- a/android/Nile/app/src/main/res/layout/activity_user.xml
+++ b/android/Nile/app/src/main/res/layout/activity_user.xml
@@ -6,4 +6,16 @@
     android:orientation="vertical"
     tools:context="com.nile.nile.UserActivity">
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="193dp"
+        android:id="@+id/ordersList"
+        android:layout_weight="2.19" />
+
+    <fragment
+        class="com.here.android.mpa.mapping.MapFragment"
+        android:id="@+id/mapUser"
+        android:layout_width="fill_parent"
+        android:layout_height="302dp"/>
+
 </LinearLayout>
